fix: gets rid of horizontal scroll bar in left nav

--- a/src/DetailsView/components/nav-link-button.scss
+++ b/src/DetailsView/components/nav-link-button.scss
@@ -5,6 +5,7 @@ a,
 button {
     &.nav-link-button {
         width: calc(100% - #{$pivotItemLeftBorderWidth});
+        padding-left: unset;
         &:hover,
         &:active,
         &:focus,
